# parser

./: .gitignore  .prettierrc  LICENSE.txt  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: release.yaml
.svelte-kit/: ambient.d.ts
.svelte-kit/types/: route_meta_data.json
legasy/: _AppExample.tsx
legasy/hooks/: useDragAndDrop.ts
src/: App.css  App.tsx  CrossIcon.tsx  FileIcon.tsx  ToggleIcon.tsx  _AppExample.tsx  app.css  app.html  main.tsx  mockData.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: default-presets.json
src-tauri/src/: commands.rs  consts.rs  error.rs  lib.rs  utils.rs
src/animation/: card.ts  modal.ts  seletct.ts  toast.ts
src/components/: Button.tsx  ButtonUploads.tsx  Card.tsx  DarkModeToggle.tsx  DragAndDrop.tsx  EditModal.tsx  FileInput.tsx  FileTree.tsx  GridMask.tsx  GroupButtons.tsx  Header.tsx  Input.tsx  ListFiles.tsx  Navbar.tsx  Preset.tsx  PresetForm.tsx  PresetList.tsx  PressetsModal.tsx  PreviewModal.tsx  SideBar.tsx  Toast.tsx  TreeNode.tsx
src/context/: ToastContext.tsx
src/hooks/: useClickOutside.ts  useDragAndDrop.ts  useFileManager.ts  useFileTree.ts  usePreset.ts  usePresset.ts  useTheme.ts  useToast.tsx
src/icons/: ArrowIcon.tsx  CopyIcon.tsx  CrossIcon.tsx  DeleteIcon.tsx  DownLoadsIcon.tsx  EditIcon.tsx  ErrorIconToast.tsx  FileIcon.tsx  FolderIcon.tsx  GitIcon.tsx  InfoIconToast.tsx  InputIcon.tsx  MoonIcon.tsx  OpenFolderIcon.tsx  SavedContentIcon.tsx  SettingIcon.tsx  SuccessIconToast.tsx  SunIcon.tsx  TextFileIcon.tsx  ToggleIcon.tsx  UploadIcon.tsx  index.ts
src/layouts/: RootLoyaout.tsx
src/lib/: shemas.ts  tauri.ts  type.ts  utils.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts  MainPage.tsx  MainScreen.tsx  SavedFiles.tsx  SavedFilesPage.tsx  SavedFilesScreen.tsx  (+4 more)
(+58 files in other folders)
